Exercise-1/hands-on/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment
  labels:
    name: payment
