Exercise-1/hands-on/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment
  labels:
    app: payment-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: payment-service
